Offer tuned collector settings for the game
Minecraft allocates an enormous number of short-lived objects every frame and
keeps almost none of them. The JVM's defaults are tuned for long-running server
workloads, where letting garbage accumulate and clearing it in one pause is a
good trade -- here that pause is the stutter people blame on their world rather
than on a default.

Balanced is G1 asked for short pauses and a large young generation, since
nearly everything dies within a frame or two and collecting it there is close
to free. Low pause is the generational collector built for this shape of work,
trading some throughput and memory for consistency.

Nothing is applied unless chosen, and the user's own arguments are added after
the preset so anything set deliberately wins. A launcher that quietly rewrites
how somebody runs their game, and is then blamed when something behaves oddly,
is worse than one that offers the choice.

Measured while here: the launcher itself reaches an answering API in about
320ms warm, so there was nothing worth optimising on that side.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>